syntax = "proto3";

option csharp_namespace = "GrpcClient"; // all C# generated classes will have this namespace

package cartingGrpcPackage;

service CartItemsService {
  rpc GetCartItemsUnary (CartItemsRequestMessage) returns (CartItemsReplyMessage);

  rpc GetCartItemsServerStreaming (CartItemsRequestMessage) returns (stream ItemMessage); // stream (not CartItemsReply)

  rpc AddItemToCartClientStreaming (stream ItemMessage) returns (AddItemsReplyMessage);

  rpc AddItemToCartBiDirectionalStreaming (stream ItemMessage) returns (stream ItemMessage);
}

message CartItemsRequestMessage {
  int32 cartId = 1;
}
 
message CartItemsReplyMessage {
  int32 cartId = 1;
  repeated ItemMessage items = 2;
}

message AddItemsReplyMessage {
	int32 addedItemsCount = 1;
}

message ItemMessage {
	int32 id = 1;
	int32 cartId = 2; // this field doesn't exist in domain model (instead of AddItemToCartRequestMessage)
	string name = 3;
	string fullDescription = 4;
	ImageMessage image = 5;
	double price = 6;
	int32 quantity = 7;
	int32 categoryId = 8;

}

message ImageMessage {
	string url = 1;
	string alt = 2;
}

//message AddItemToCartRequestMessage {
//	int32 cartId = 1;
//	ItemMessage item = 2;
//}